# BioKell

./: README.md  biokell.cabal
data/: GoldBug.txt  dataset_3_2.txt  dataset_3_5.txt  txt.txt
lib/: FrequentWords.hs  PatternCount.hs  ReverseComplement.hs  Types.hs  Utils.hs
src/: BioKell.hs
