name:                biokell
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/biokell#readme
license:             BSD3
license-file:        LICENSE
author:              Lockne
maintainer:          https://github.com/Lockne
copyright:           2020 Author name here
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

library
  hs-source-dirs:      lib
  exposed-modules:     PatternCount, Utils, FrequentWords, ReverseComplement
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5, containers, bytestring


-- executable biokell
--   hs-source-dirs:      src
--   main-is:             Main.hs
--   default-language:    Haskell2010
--   build-depends:       base >= 4.7 && < 5, containers, bytestring
